feat: authenticate
